--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.552.0",
     "react": "^19.2.0",
